[package]
name = "proc-macro-utils"
version = "0.5.0"
edition = "2021"
categories = ["development-tools::procedural-macro-helpers"]
description = "low-level utilities on proc-macro and proc-macro2 types"
keywords = ["macros"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/proc-macro-utils"
documentation = "https://docs.rs/proc-macro-utils"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1", optional = true }

[features]
default = ["proc-macro2", "proc-macro"]
proc-macro = []

[dev-dependencies]
quote = "1"

[workspace]
members = ["example"]
