[package]
name = "proc-macro-utils"
version = "0.8.0"
edition = "2021"
categories = ["development-tools::procedural-macro-helpers"]
description = "low-level utilities on proc-macro and proc-macro2 types"
keywords = ["macros"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/proc-macro-utils"
documentation = "https://docs.rs/proc-macro-utils"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
smallvec = { version = "1.5", optional = true, features = ["const_generics"] }

[features]
default = ["proc-macro2", "proc-macro", "parser", "quote"]
proc-macro = []
parser = ["smallvec", "proc-macro2"]

[dev-dependencies]
quote = "1"

[workspace]
members = ["example"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->

## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
